--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
             <button type="submit">Send Message</button>
         </form>
         <div class="social-links">
-            <a href="mailto:youremail@example.com">Email</a>
+            <a href="mailto:Xazid12@gmail.com">Email</a>
             <a href="https://www.linkedin.com">LinkedIn</a>
-            <a href="https://github.com">GitHub</a>
+            <a href="https://github.com/sazidbro">GitHub</a>
         </div>
     </section>
 
